<resources>
    <string name="app_name">Validation </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_new_survey">New Survey</string>
    <string name="title_home">Home</string>
    <string name="rb_dk">Donot Know</string>
    <string name="rb_ra">Rafused to answer</string>
    <string name="action_settings">Settings</string>
    <string name="hint_name">Full Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter the password</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="default_p">#</string>
    <string name="default_guest_name">Name</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="rb_yes"> Yes </string>
    <string name="rb_no"> No </string>
    <string name="rb_na"> NA </string>
    <string name="lhw_stockout"> Stock Out </string>
    <string name="lhwf1header_a"> Section A: LHW Information </string>
    <string name="lhwf1a1"> Name of Taluka/Tehsil </string>
    <string name="lhwf1a2"> Name of reporting health facility </string>
    <string name="lhwf1a3"> Code of LHW </string>
    <string name="lhwf1a4"> Name of LHW </string>
    <string name="lhwf1header_b"> Section B: House Hold Information </string>
    <string name="lhwf1b1"> Khandan # of selected HH </string>
    <string name="lhwf1b2"> Residential address (village name, mohalla name) </string>
    <string name="lhwf1b3"> Contact # (optional) </string>
    <string name="lhwf1header_c"> Section C: Maternal care during pregnancy </string>
    <string name="lhwf1c1"> # of registered PW in last three months </string>
    <string name="lhwf1c2"> # of PW in HH registered in last three months </string>
    <string name="lhwf1c3"> Name of registered PW  </string>
    <string name="lhwf1c3A"> Date of registration/LHW first visit  </string>
    <string name="lhwf1c4"> Husband’s name </string>
    <string name="lhwf1c4A"> Gestational age of pregnancy </string>
    <string name="lhwf1c5"> Total Number of ANC visit(s) recorded </string>
    <string name="lhwf1c6"> Is PW vaccinated for TT?   </string>
    <string name="lhwf1c7"> LHW referred PW to HF for TT vaccine </string>
    <string name="lhwf1c7A"> Who vaccinated PW for TT </string>
    <string name="lhwf1c7Aa"> LHW </string>
    <string name="lhwf1c7Ab"> Vaccinator </string>
    <string name="lhwf1c8"> LHW provided Iron folic acid to PW </string>
    <string name="lhwf1header_d"> Section D: Maternal care after delivery </string>
    <string name="lhwf1d1"> # of deliveries registered in last three months </string>
    <string name="lhwf1d2"> # of delivered women in HH registered in last three months </string>
    <string name="lhwf1d3"> Name of mother  </string>
    <string name="lhwf1d4"> Husband’s name </string>
    <string name="lhwf1d4A"> Date of LHW first PNC visit </string>
    <string name="lhwf1d4Aa"> Month </string>
    <string name="lhwf1d4Ab"> Year </string>
    <string name="lhwf1d5"> Where was delivery conducted? </string>
    <string name="lhwf1d5_1"> Public HF </string>
    <string name="lhwf1d5_2"> Private HF </string>
    <string name="lhwf1d5_3"> CMW Station </string>
    <string name="lhwf1d5_4"> Home </string>
    <string name="lhwf1d6"> Outcome of delivery </string>
    <string name="lhwf1d6_1"> Still birth </string>
    <string name="lhwf1d6_2"> Live birth </string>
    <string name="lhwf1header_e"> section E: New born care </string>
    <string name="lhwf1e1"> Total # of registered newborns </string>
    <string name="lhwf1e2"> # of newborn registered in HH </string>
    <string name="lhwf1e3"> Name of newborn (any one) </string>
    <string name="lhwf1e4"> Name of mother </string>
    <string name="lhwf1e4A"> Date of LHW first visit to newborn </string>
    <string name="lhwf1e5"> Birth weight recorded </string>
    <string name="lhwf1e6"> Early initiation of breastfeeding recorded  </string>
    <string name="lhwf1e7"> Record keeping for polio drops  after birth </string>
    <string name="lhwf1e8"> Any neonatal death registered in last three months for this HH? </string>
    <string name="lhwf1header_f"> Section F: Diarrhea Section </string>
    <string name="lhwf1f1"> # of children less than three years of age registered for the diarrhea in last 3 months? </string>
    <string name="lhwf1f2"> # of children less than five years of age registered for the diarrhea in last 3 months? </string>
    <string name="lhwf1f3"> # of children in HH less than five years of age registered for the diarrhea in last 3 months?</string>
    <string name="lhwf1f4"> Name of child in HH who had diarrhea in last three months </string>
    <string name="lhwf1f4A"> Date of LHW visit during diarrhea </string>
    <string name="lhwf1f5"> Age of child (in months) in HH who had diarrhea in last three months </string>
    <string name="lhwf1f6"> LHW provided ORS/LoORS for diarrhea </string>
    <string name="lhwf1f7"> LHW provided Zinc DT/syrup for diarrhea </string>
    <string name="lhwf1f8"> LHW referred child to the HF </string>
    <string name="lhwf1f9"> Maintained immunization record for child (in HH) under five years of age </string>
    <string name="lhwf1f10"> Any under-five death due to diarrhea registered in last three months for this HH? </string>
    <string name="lhwf1header_g"> Section G: Cough or Difficult breathing </string>
    <string name="lhwf1g1"> # of children less than three years of age registered in last 3 months. </string>
    <string name="lhwf1g2"> # of children less than five years of age registered for cough or difficult breathing/pneumonia in last three months. </string>
    <string name="lhwf1g3"># of children in HH less than five years of age who had cough or difficult breathing/pneumonia in last three months </string>
    <string name="lhwf1g4"> Name of child in HH who had cough or difficult breathing in last three months </string>
    <string name="lhwf1g4A"> Date of LHW visit during pneumonia </string>
    <string name="lhwf1g5"> Age of child (in months) in HH who had cough or difficult breathing in last three months </string>
    <string name="lhwf1g6"> LHW provided Amoxicillin DT/syrup in case of pneumonia </string>
    <string name="lhwf1g7"> LHW referred child to the HF for pneumonia </string>
    <string name="lhwf1g8"> Maintained immunization record for child under five years of age </string>
    <string name="lhwf1g9"> Any under-five death due to pneumonia registered in last three months for this HH? </string>
    <string name="lhwf1header_h"> Section H: Married Women of Reproductive Age </string>
    <string name="lhwf1h1"> # registered MWRA </string>
    <string name="lhwf1h2"> # of MWRA in HH </string>
    <string name="lhwf1h3"> Name of MWRA in HH </string>
    <string name="lhwf1h4"> Husband’s name </string>
    <string name="lhwf1h5"> Age (in years) of MWRA </string>
    <string name="lhwf3header_b"> Section B: Village Health Committee (VHC) </string>
    <string name="lhwf3b1"> Did LHW form VHC? </string>
    <string name="lhwf3b2"> Availability of VHC meeting recording form? </string>
    <string name="lhwf3b3"> Total # of members mentioned in meeting recording form </string>
    <string name="lhwf3b4a"> Member1 name </string>
    <string name="lhwf3b4b"> Member2 name </string>
    <string name="lhwf3b4c"> Member3 name </string>
    <string name="lhwf3b5"> Meeting conducted last month? </string>
    <string name="lhwf3b6"> Record kept for last meeting in recording form? </string>
    <string name="lhwf5header_b"> Section B: Women Support Group(WSG) </string>
    <string name="lhwf5b1"> Did LHW form WSG? </string>
    <string name="lhwf5b2"> Total # of WSG formed by LHW </string>
    <string name="lhwf5b3"> # of meetings held in previous month mentioned in meeting report/form </string>
    <string name="lhwf5b4"> # of members mentioned in WSG meeting report/form </string>
    <string name="lhwf5b5a"> Member1 name </string>
    <string name="lhwf5b5b"> Member2 name </string>
    <string name="lhwf5b5c"> Member3 name </string>
    <string name="lhwf5b6"> # of participants attended the session mentioned in meeting report/form </string>
    <string name="lhwf5b7"> Topics covered in session </string>
    <string name="lhwf5b7_1"> Maternal care during pregnancy </string>
    <string name="lhwf5b7_2"> Maternal care after delivery </string>
    <string name="lhwf5b7_3"> Newborn care </string>
    <string name="lhwf5b7_4"> Diarrhea </string>
    <string name="lhwf5b7_5"> Pneumonia </string>
    <string name="lhwf5b7_6"> WASH </string>
    <string name="lhwf5b7_7"> Family Planning </string>
    <string name="lhwf5b7_8"> Immunization </string>
    <string name="lhwf2header_b"> Section B: House Hold Information </string>
    <string name="lhwf2b1"> Khandan # of selected HH </string>
    <string name="lhwf2b2"> Residential address (village name, mohalla name) </string>
    <string name="lhwf2b3"> Contact # (optional) </string>
    <string name="lhwf2c2"> # of PW in HH whose pregnancy was identified in last three months </string>
    <string name="lhwf2c3"> Name of PW/Respndent  </string>
    <string name="lhwf2c4"> Husband’s name </string>
    <string name="lhwf2c5"> How many ANC visits PW did?</string>
    <string name="lhwf2c6"> Is  PW vaccinated for TT? </string>
    <string name="lhwf2c7"> LHW referred PW to HF for TT vaccine </string>
    <string name="lhwf2c8"> LHW provided Iron folic acid to PW </string>
    <string name="lhwf2c9"> LHW informed about danger signs During pragnancy </string>
    <string name="lhwf2c10"> LHW counseled PW about ANC </string>
    <string name="lhwf2c11"> LHW counseled PW about facility based delivery </string>
    <string name="lhwf2header_d"> Section D: Maternal care after delivery </string>
    <string name="lhwf2d2"> # of  women in HH who had delivery in last three months </string>
    <string name="lhwf2d3"> Name of mother/respondent </string>
    <string name="lhwf2d4"> Husband’s name </string>
    <string name="lhwf2d5"> Where was delivery conducted? </string>
    <string name="lhwf2d5_1"> Public HF </string>
    <string name="lhwf2d5_2"> Private HF </string>
    <string name="lhwf2d5_3"> CMW Station </string>
    <string name="lhwf2d5_4"> Home </string>
    <string name="lhwf2d6"> Outcome of delivery </string>
    <string name="lhwf2d6_1"> still birth </string>
    <string name="lhwf2d6_2"> live birth </string>
    <string name="lhwf6header_b"> Section B: Village Health Committee (VHC) </string>
    <string name="lhwf6b0"> WSG Member Name </string>
    <string name="lhwf6b1"> Are you aware of WSG </string>
    <string name="lhwf6b2"> Are you member of WSG </string>
    <string name="lhwf6b3"> How many members (u know) are there in WSG? </string>
    <string name="lhwf6b4"> # of sessions held in last month </string>
    <string name="lhwf6b5"> # of participants attended the session </string>
    <string name="lhwf6b6"> Topics covered in session </string>
    <string name="lhwf6b6_1"> Maternal care during pregnancy </string>
    <string name="lhwf6b6_2"> Maternal care after delivery </string>
    <string name="lhwf6b6_3"> Newborn care </string>
    <string name="lhwf6b6_4"> Diarrhea </string>
    <string name="lhwf6b6_5"> Pneumonia </string>
    <string name="lhwf6b6_6"> WASH </string>
    <string name="lhwf6b6_7"> Family Planning </string>
    <string name="lhwf6b6_8"> Immunization </string>
</resources>