<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LHWDashbord">

    <data>

        <import type="android.view.View" />

        <variable
            name="callback"
            type="com.irfansyed.umeedenau.validation.Form6SectionB" />
    </data>



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_marginBottom="5dp"
        android:fadeScrollbars="false"
        android:fillViewport="true"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="5dp"
        android:scrollbarSize="50dip">
        <!-- Parent layout starts -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#F1F1F1"
            android:orientation="vertical">




            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                >
                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:src="@drawable/uncolor"
                    />
                <TextView
                    style="@style/TextView"
                    android:text="@string/lhwf6header_b"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="7dp"
                    android:textColor="#008E45"

                    />

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/hitnscolor" />


        <LinearLayout
            android:id="@+id/SectionB"
            style="@style/Q_Linerlayout_v"

            >


            <!-- lhwf6b0 starts -->
            <android.support.v7.widget.CardView style="@style/Q_CardView"


                >



                <LinearLayout
                    android:id="@+id/Lv_lhwf6b0"
                    style="@style/Q_Linerlayout_v"

                    >

                    <TextView

                        style="@style/TextView"
                        android:text="@string/lhwf6b0"

                        />

                    <Spinner

                        style="@style/Combox"
                        android:id="@+id/lhwf6b0"
                        />


                </LinearLayout>
            </android.support.v7.widget.CardView>
            <!-- lhwf6b0 ends-->
            

            <!-- lhwf6b1 starts -->
            <android.support.v7.widget.CardView style="@style/Q_CardView"


                >



                <LinearLayout
                    android:id="@+id/Lv_lhwf6b1"
                    style="@style/Q_Linerlayout_v"

                    >

                    <TextView

                        style="@style/TextView"
                        android:text="@string/lhwf6b1"

                        />

                    <RadioGroup
                        android:id="@+id/lhwf6b1"
                        style="@style/RadioGroup">

                        <RadioButton
                            android:id="@+id/lhwf6b1_1"
                            style="@style/RadioButton"
                            android:text="@string/rb_yes"/>

                        <RadioButton
                            android:id="@+id/lhwf6b1_2"
                            style="@style/RadioButton"
                            android:text="@string/rb_no"/>


                    </RadioGroup>


                </LinearLayout>
            </android.support.v7.widget.CardView>
            <!-- lhwf6b1 ends-->


            <!-- lhwf6b2 starts -->
            <android.support.v7.widget.CardView style="@style/Q_CardView"

                android:visibility='@{lhwf6b12.checked? View.GONE : View.VISIBLE}'
                >



                <LinearLayout
                    android:id="@+id/Lv_lhwf6b2"
                    style="@style/Q_Linerlayout_v"

                    >

                    <TextView

                        style="@style/TextView"
                        android:text="@string/lhwf6b2"

                        />


                    <RadioGroup
                        android:id="@+id/lhwf6b2"
                        style="@style/RadioGroup">

                        <RadioButton
                            android:id="@+id/lhwf6b2_1"
                            style="@style/RadioButton"
                            android:text="@string/rb_yes"/>

                        <RadioButton
                            android:id="@+id/lhwf6b2_2"
                            style="@style/RadioButton"
                            android:text="@string/rb_no"/>


                    </RadioGroup>


                </LinearLayout>
            </android.support.v7.widget.CardView>
            <!-- lhwf6b2 ends-->

            <!-- lhwf6b3 starts -->
            <android.support.v7.widget.CardView style="@style/Q_CardView"

                android:visibility='@{lhwf6b12.checked || lhwf6b22.checked ? View.GONE : View.VISIBLE}'
                >



                <LinearLayout
                    android:id="@+id/Lv_lhwf6b3"
                    style="@style/Q_Linerlayout_v"

                    >

                    <TextView

                        style="@style/TextView"
                        android:text="@string/lhwf6b3"

                        />

                    <EditText
                        style="@style/EditText_number"
                        android:id="@+id/lhwf6b3"
                        android:maxLength="3"
                        android:hint="@string/lhwf6b3"/>


                </LinearLayout>
            </android.support.v7.widget.CardView>
            <!-- lhwf6b3 ends-->

            <!-- lhwf6b4 starts -->
            <android.support.v7.widget.CardView style="@style/Q_CardView"

                android:visibility='@{lhwf6b12.checked || lhwf6b22.checked ? View.GONE : View.VISIBLE}'
                >



                <LinearLayout
                    android:id="@+id/Lv_lhwf6b4"
                    style="@style/Q_Linerlayout_v"

                    >

                    <TextView

                        style="@style/TextView"
                        android:text="@string/lhwf6b4"

                        />

                    <EditText
                        style="@style/EditText_number"
                        android:id="@+id/lhwf6b4"
                        android:maxLength="3"
                        android:hint="@string/lhwf6b4"/>


                </LinearLayout>
            </android.support.v7.widget.CardView>
            <!-- lhwf6b4 ends-->



            <!-- lhwf6b5 starts -->
            <android.support.v7.widget.CardView style="@style/Q_CardView"

                android:visibility='@{lhwf6b12.checked || lhwf6b22.checked ? View.GONE : View.VISIBLE}'
                >



                <LinearLayout
                    android:id="@+id/Lv_lhwf6b5"
                    style="@style/Q_Linerlayout_v"

                    >

                    <TextView

                        style="@style/TextView"
                        android:text="@string/lhwf6b5"

                        />

                    <EditText
                        style="@style/EditText_number"
                        android:id="@+id/lhwf6b5"
                        android:maxLength="3"
                        android:hint="@string/lhwf6b5"/>

                </LinearLayout>
            </android.support.v7.widget.CardView>
            <!-- lhwf6b5 ends-->



            <!-- lhwf6b6 starts -->
            <android.support.v7.widget.CardView style="@style/Q_CardView"
                android:visibility='@{lhwf6b12.checked || lhwf6b22.checked ? View.GONE : View.VISIBLE}'

                >



                <LinearLayout
                    android:id="@+id/Lv_lhwf6b6"
                    style="@style/Q_Linerlayout_v"

                    >

                    <TextView

                        style="@style/TextView"
                        android:text="@string/lhwf6b6"

                        />

                <LinearLayout
                    style="@style/Q_Linerlayout_v"
                    android:tag="0"
                    >
                  <CheckBox

                    style="@style/CheckBox"
                      android:id="@+id/lhwf6b6_1"
                      android:text="@string/lhwf6b6_1"
                     />
                    <CheckBox

                        style="@style/CheckBox"
                        android:id="@+id/lhwf6b6_2"
                        android:text="@string/lhwf6b6_2"
                        />
                    <CheckBox

                        style="@style/CheckBox"
                        android:id="@+id/lhwf6b6_3"
                        android:text="@string/lhwf6b6_3"
                        />
                    <CheckBox

                        style="@style/CheckBox"
                        android:id="@+id/lhwf6b6_4"
                        android:text="@string/lhwf6b6_4"
                        />
                    <CheckBox

                        style="@style/CheckBox"
                        android:id="@+id/lhwf6b6_5"
                        android:text="@string/lhwf6b6_5"
                        />
                    <CheckBox

                        style="@style/CheckBox"
                        android:id="@+id/lhwf6b6_6"
                        android:text="@string/lhwf6b6_6"
                        />
                    <CheckBox

                        style="@style/CheckBox"
                        android:id="@+id/lhwf6b6_7"
                        android:text="@string/lhwf6b6_7"
                        />
                    <CheckBox

                        style="@style/CheckBox"
                        android:id="@+id/lhwf6b6_8"
                        android:text="@string/lhwf6b6_8"
                        />

                </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <!-- lhwf6b6 ends-->


        </LinearLayout>

            <!-- Button -->
            <android.support.v7.widget.CardView
                style="@style/Q_CardView"

                >




                <Button
                    android:id="@+id/btnNext"
                    style="@style/Button_Next"
                    android:layout_margin="10dp"
                    android:layout_weight="50"
                    android:text="Save " />



            </android.support.v7.widget.CardView>

            <!-- Button Next Ends-->


        </LinearLayout>

    </ScrollView>


</layout>
